--- a/index.html
+++ b/index.html
@@ -1430,7 +1430,13 @@
                 {id: "sv11b-156", name: "Audino", number: "156/173", dex: "531", set: "blackbolt", img: "https://github.com/TheRSigma/BBWFTierList/blob/main/images/blackbolt-156.jpg?raw=true"},
                 {id: "sv11b-157", name: "Minccino", number: "157/173", dex: "572", set: "blackbolt", img: "https://github.com/TheRSigma/BBWFTierList/blob/main/images/blackbolt-157.jpg?raw=true"},
                 {id: "sv11b-158", name: "Cinccino", number: "158/173", dex: "573", set: "blackbolt", img: "https://github.com/TheRSigma/BBWFTierList/blob/main/images/blackbolt-158.jpg?raw=true"},
-                
+                {id: "sv11b-167", name: "Serperior", number: "167/173", dex: "497", set: "blackbolt", img: "https://github.com/TheRSigma/BBWFTierList/blob/main/images/blackbolt-167.jpg?raw=true"},
+                {id: "sv11b-168", name: "Kyurem", number: "168/173", dex: "646", set: "blackbolt", img: "https://github.com/TheRSigma/BBWFTierList/blob/main/images/blackbolt-168.jpg?raw=true"},
+                {id: "sv11b-169", name: "Zekrom", number: "169/173", dex: "644", set: "blackbolt", img: "https://github.com/TheRSigma/BBWFTierList/blob/main/images/blackbolt-169.jpg?raw=true"},
+                {id: "sv11b-170", name: "Meloetta", number: "170/173", dex: "648", set: "blackbolt", img: "https://github.com/TheRSigma/BBWFTierList/blob/main/images/blackbolt-170.jpg?raw=true"},
+                {id: "sv11b-171", name: "Excadrill", number: "171/173", dex: "530", set: "blackbolt", img: "https://github.com/TheRSigma/BBWFTierList/blob/main/images/blackbolt-171.jpg?raw=true"},
+                {id: "sv11b-172", name: "Genesect", number: "172/173", dex: "649", set: "blackbolt", img: "https://github.com/TheRSigma/BBWFTierList/blob/main/images/blackbolt-172.jpg?raw=true"},
+                {id: "sv11b-173", name: "N", number: "173/173", dex: "001", set: "blackbolt", img: "https://github.com/TheRSigma/BBWFTierList/blob/main/images/blackbolt-173.jpg?raw=true"}
                 // White Flare cards
                 {id: "sv11w-087", name: "Sewaddle", number: "087/173", dex: "540", set: "whiteflare", img: "https://github.com/TheRSigma/BBWFTierList/blob/main/images/whiteflare-87.jpg?raw=true"},
                 {id: "sv11w-088", name: "Swadloon", number: "088/173", dex: "541", set: "whiteflare", img: "https://github.com/TheRSigma/BBWFTierList/blob/main/images/whiteflare-88.jpg?raw=true"},
