--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
     
     <div class="card-pool" id="card-pool">
         <!-- Cards will be inserted here by JavaScript -->
-  
+      </div>
 
 
     <script>
