--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
     </style>
 </head>
 <body>
-    <h1>BBWF Illustration Rares Tier List</h1>
+    <h1>Black Bolt + White Flare Illustration Rares Tier List</h1>
     
     <div class="controls">
         <button id="add-tier">Add Tier</button>
