--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
                 {id: "sv11b-142", name: "Krokorok", number: "142/173", dex: "552", set: "blackbolt", img: "https://github.com/TheRSigma/BBWFTierList/blob/main/images/blackbolt-142.jpg?raw=true"},
                 {id: "sv11b-143", name: "Krookodile", number: "143/173", dex: "553", set: "blackbolt", img: "https://github.com/TheRSigma/BBWFTierList/blob/main/images/blackbolt-143.jpg?raw=true"},
                 {id: "sv11b-098", name: "Darumaka", number: "98/173", dex: "554", set: "blackbolt", img: "https://github.com/TheRSigma/BBWFTierList/blob/main/images/blackbolt-98.jpg?raw=true"},
-                {id: "sv11b-099", name: "Darumaka", number: "99/173", dex: "554", set: "blackbolt", img: "https://github.com/TheRSigma/BBWFTierList/blob/main/images/blackbolt-99.jpg?raw=true"},
+                {id: "sv11b-099", name: "Darmanitan", number: "99/173", dex: "554", set: "blackbolt", img: "https://github.com/TheRSigma/BBWFTierList/blob/main/images/blackbolt-99.jpg?raw=true"},
                 {id: "sv11b-093", name: "Maractus", number: "93/173", dex: "556", set: "blackbolt", img: "https://github.com/TheRSigma/BBWFTierList/blob/main/images/blackbolt-93.jpg?raw=true"},
                 {id: "sv11b-135", name: "Dwebble", number: "135/173", dex: "557", set: "blackbolt", img: "https://github.com/TheRSigma/BBWFTierList/blob/main/images/blackbolt-135.jpg?raw=true"},
                 {id: "sv11b-136", name: "Crustle", number: "136/173", dex: "558", set: "blackbolt", img: "https://github.com/TheRSigma/BBWFTierList/blob/main/images/blackbolt-136.jpg?raw=true"},
